 5. Fix deleting playlists.
 6. Center crop background image in mobile now playing info.
 7. Don't add play actions to toolbar for track/album/atist info.
 8. Fix buttons in fullscreen image view.
 9. Remove option to sort favourites, instead allow drag'n'drop re-ordering.
10. Don't allow pining of favourites  - their IDs seem to change too, and
    why pin a favourite directly?

0.2.0
-----
 1. Fix swipe to change views not working after show Information dialog.
 2. Add ellipsis to main toolbar text.
 3. Fix scrollbar initialisation.
 4. Place group players first in drop down menu and in Manage Players dialog.
 5. Auto-switch layout (desktop/mobile) if set to auto and not on mobile device.
 6. If switch desktop/mobile layout in settings, then don't prompt for
    confirmation.
 7. Ignore swipes on now-playing position slider in mobile layout.
 8. Add 'Play album starting at track' to 1st track as well, just for
    consistency.
 9. Fix sync dialog.
10. Detect added/removed players in Manage Players dialog.
11. Add group player management; add, update, and delete.
12. Allow changing player name in Player Settings dialog.
13. Add option to use current track, or queue, duration as sleep timer.
14. When new plugins are detected in Info page, set activePage=SETUP_PLUGINS in
    URL.
15. Group players have replaygain setting.
16. Provide access to player settings from Manage Players dialog.
17. Fix radio actions.

0.1.5
-----
 1. Better image grid sizing.
 2. Set A..Z group size to 10.
 3. Show signal strength in Information dialog.
 4. If lose server connection, display modal dialog (similar to when there are
    no players) until connection is re-established.
 5. Allow "PlayAll" / "AddAll" for radio.
 6. Fix multi-artist retrievel in now playing.
 7. Store command used to populate list, so that it can be re-used when
    fetching more.
 8. Fix un-pinnig of items.
 9. When un-pinnnig an app, re-add 'Pin' menu entry.